--- a/src/View/Application/form/other/ReservacionesSalones.form
+++ b/src/View/Application/form/other/ReservacionesSalones.form
@@ -167,9 +167,11 @@
         <Component class="View.BotonesText.CustomComboBox" name="cbSearch">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="4">
                 <StringItem index="0" value="Motivo"/>
                 <StringItem index="1" value="Docente"/>
+                <StringItem index="2" value="Sal&#xf3;n"/>
+                <StringItem index="3" value="Estado"/>
               </StringArray>
             </Property>
           </Properties>
